Add monitor selector dropdown for automatic gear defaults

--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearAddSelectorDefault" id="autoGearAddSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearAddSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearAddSelectorDefault"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-notes-field">
                   <label for="autoGearAddNotes" id="autoGearAddNotesLabel">Notes</label>
@@ -1469,7 +1469,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveSelectorDefault" id="autoGearRemoveSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearRemoveSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearRemoveSelectorDefault"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-notes-field">
                   <label for="autoGearRemoveNotes" id="autoGearRemoveNotesLabel">Notes</label>
@@ -1486,7 +1486,6 @@
           </div>
         </div>
         <datalist id="autoGearItemCatalog"></datalist>
-        <datalist id="autoGearMonitorCatalog"></datalist>
       </section>
       <section
         id="settingsPanel-accessibility"
