Ensure help buttons use button link styling

--- a/index.html
+++ b/index.html
@@ -1951,7 +1951,7 @@
                 ><strong>Backup</strong></a>
                 so you have two offline recovery copies that can be restored from the
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#restoreSettings"
                   data-help-target="#restoreSettings"
                   data-help-highlight="#settingsDialog"
@@ -1987,9 +1987,9 @@
                 dialog instantly.
               </li>
               <li>
-                <kbd>Ctrl</kbd>+<kbd>/</kbd> (<kbd>⌘</kbd>+<kbd>/</kbd>) — toggle
-                <a class="help-link" href="#helpButton" data-help-target="#helpButton">help</a> even while typing in a
-                field.
+                <kbd>Ctrl</kbd>+<kbd>/</kbd> (<kbd>⌘</kbd>+<kbd>/</kbd>) — toggle the
+                <a class="help-link button-link" href="#helpButton" data-help-target="#helpButton"><strong>Help</strong></a>
+                dialog even while typing in a field.
               </li>
               <li>
                 <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd>) — jump straight to the
@@ -2020,12 +2020,12 @@
               </li>
               <li>
                 <kbd>D</kbd> — toggle
-                <a class="help-link" href="#darkModeToggle" data-help-target="#darkModeToggle">dark mode</a> on or off to
+                <a class="help-link button-link" href="#darkModeToggle" data-help-target="#darkModeToggle">dark mode</a> on or off to
                 match your lighting environment.
               </li>
               <li>
                 <kbd>P</kbd> — switch the playful
-                <a class="help-link" href="#pinkModeToggle" data-help-target="#pinkModeToggle">Pink Mode</a> theme and store
+                <a class="help-link button-link" href="#pinkModeToggle" data-help-target="#pinkModeToggle">Pink Mode</a> theme and store
                 the preference for next time.
               </li>
             </ul>
@@ -2179,13 +2179,13 @@
               >language dropdown</a>
               , toggle
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#darkModeToggle"
                 data-help-target="#darkModeToggle"
               >dark mode</a>
               or
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#pinkModeToggle"
                 data-help-target="#pinkModeToggle"
               >Pink Mode</a>
@@ -2372,7 +2372,7 @@
             <li>
               Open the Project Requirements dialog with the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#projectRequirementsOutput"
                 data-help-target="#generateGearListBtn"
               >Generate Gear List and Project Requirements</a>
@@ -2777,7 +2777,7 @@
             <ul>
               <li>
                 Use the
-                <a class="help-link" href="#settingsButton" data-help-target="#settingsButton">Settings</a>
+                <a class="help-link button-link" href="#settingsButton" data-help-target="#settingsButton">Settings</a>
                 button or the
                 <a class="help-link" href="#languageSelect" data-help-target="#languageSelect">language dropdown</a>
                 to switch languages instantly—the planner remembers your preference for next time.
@@ -2799,7 +2799,7 @@
                 or pick a different
                 <a class="help-link" href="#settingsFontFamily" data-help-target="#settingsFontFamily">typeface</a>.
                 Add local fonts from your computer with the
-                <a class="help-link" href="#localFontsButton" data-help-target="#localFontsButton">Add local fonts</a>
+                <a class="help-link button-link" href="#localFontsButton" data-help-target="#localFontsButton">Add local fonts</a>
                 option whenever the browser supports it.
               </li>
               <li>
@@ -2858,7 +2858,7 @@
             <li>
               After reconnecting, choose
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#reloadButton"
                 data-help-target="#reloadButton"
               ><strong>Force reload</strong></a>
@@ -2880,7 +2880,7 @@
               ><strong>Export project</strong></a>
               JSON and any Device Library
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#exportDataBtn"
                 data-help-target="#exportDataBtn"
                 data-help-highlight="#device-manager"
@@ -2943,7 +2943,7 @@
                 >Edit Device Data…</a>
                 and download a JSON copy with
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#exportDataBtn"
                   data-help-target="#exportDataBtn"
                   data-help-highlight="#device-manager"
@@ -2963,14 +2963,14 @@
               <li>
                 In
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#settingsButton"
                   data-help-target="#settingsButton"
                   data-help-highlight="#settingsDialog"
                 >Settings</a>
                 → <em>Backup &amp; Restore</em>, choose
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#restoreSettings"
                   data-help-target="#restoreSettings"
                   data-help-highlight="#settingsDialog"
@@ -3098,7 +3098,7 @@
             <li>
               Open the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#generateGearListBtn"
                 data-help-target="#generateGearListBtn"
                 data-help-highlight="#setup-manager"
@@ -3128,7 +3128,7 @@
               <li>
                 The information is saved with the project, included in printed overviews and ready to populate the
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#generateGearListBtn"
                   data-help-target="#generateGearListBtn"
                   data-help-highlight="#setup-manager"
@@ -3390,7 +3390,7 @@
               <li>Runtime&nbsp;=&nbsp;battery capacity (Wh)&nbsp;÷&nbsp;total consumption.</li>
             <li>
               User-submitted runtimes collected through
-              <a class="help-link" href="#runtimeFeedbackBtn" data-help-target="#runtimeFeedbackBtn">Submit User Runtime Feedback</a>
+              <a class="help-link button-link" href="#runtimeFeedbackBtn" data-help-target="#runtimeFeedbackBtn">Submit User Runtime Feedback</a>
               are adjusted for temperature and weighted before averaging:
               <ul>
                 <li>Temperature: ×2 at ≤−20 °C, ×1.6 at ≤−10 °C, ×1.25 at ≤0 °C.</li>
@@ -3517,7 +3517,7 @@
                 Changes are stored locally—use
                 <a class="help-link button-link" href="#exportDataBtn" data-help-target="#exportDataBtn"><em>Export</em></a>
                 and
-                <a class="help-link" href="#importDataBtn" data-help-target="#importDataBtn"><em>Import</em></a>
+                <a class="help-link button-link" href="#importDataBtn" data-help-target="#importDataBtn"><em>Import</em></a>
                 to share databases without losing your offline copy.
               </li>
               <li>
@@ -3662,10 +3662,10 @@
             </li>
             <li>
               Before resetting anything, download your current database with
-              <a class="help-link" href="#device-manager" data-help-target="#exportDataBtn"><em>Export</em></a>
+              <a class="help-link button-link" href="#device-manager" data-help-target="#exportDataBtn"><em>Export</em></a>
               and keep project JSON files via
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#shareSetupBtn"
                 data-help-highlight="#setup-manager"
@@ -3673,7 +3673,7 @@
               so you can re-import them later.
             </li>
             <li>
-              When you run <a class="help-link" href="#settingsDialog" data-help-target="#restoreSettings"><em>Restore</em></a>
+              When you run <a class="help-link button-link" href="#settingsDialog" data-help-target="#restoreSettings"><em>Restore</em></a>
               the planner downloads a fresh safety backup first. Keep that file until you have confirmed the restored data so you
               can revert instantly if anything looks off.
             </li>
@@ -3690,10 +3690,10 @@
             </li>
             <li>
               To wipe everything clean, use
-              <a class="help-link" href="#settingsDialog" data-help-target="#factoryResetButton"><em>Factory reset</em></a>
+              <a class="help-link button-link" href="#settingsDialog" data-help-target="#factoryResetButton"><em>Factory reset</em></a>
               or open the Device Database Editor and click
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#exportAndRevertBtn"
               ><em>Export and Revert</em></a>
@@ -3743,7 +3743,7 @@
             <ul>
               <li>
                 Toggle dark mode with the
-                <a class="help-link" href="#darkModeToggle" data-help-target="#darkModeToggle">moon button</a>
+                <a class="help-link button-link" href="#darkModeToggle" data-help-target="#darkModeToggle">moon button</a>
                 or press <kbd>D</kbd> as a keyboard shortcut.
               </li>
               <li>The setting persists between visits.</li>
@@ -3790,7 +3790,7 @@
           </ul>
             <p>
               Turn on the playful palette with the
-              <a class="help-link" href="#pinkModeToggle" data-help-target="#pinkModeToggle">pink mode toggle</a>
+              <a class="help-link button-link" href="#pinkModeToggle" data-help-target="#pinkModeToggle">pink mode toggle</a>
               or press <kbd>P</kbd> for the same effect.
             </p>
         </section>
@@ -3833,7 +3833,7 @@
               >Project Name</a>
               field and click
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#saveSetupBtn"
                 data-help-highlight="#setup-manager"
@@ -3847,14 +3847,14 @@
               >Saved Projects</a>
               list. Selecting an entry loads it instantly; tweak the setup and press
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#saveSetupBtn"
                 data-help-highlight="#setup-manager"
               >Save</a>
               again to update it, use
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#deleteSetupBtn"
                 data-help-highlight="#setup-manager"
@@ -3877,21 +3877,21 @@
             <p>
               Click
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#shareSetupBtn"
                 data-help-highlight="#setup-manager"
               ><em>Export Project</em></a>
               to open the export dialog. Choose a file name and optionally include automatic gear rules before downloading a JSON bundle with your selections, project requirements, gear list, runtime feedback and any custom devices. Send the file to collaborators or keep it as a backup, then choose it in the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#applySharedLinkBtn"
                 data-help-highlight="#setup-manager"
               ><em>Import Project</em></a>
               field and press
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#applySharedLinkBtn"
                 data-help-highlight="#setup-manager"
@@ -3930,7 +3930,7 @@
             <p>
               Open any auto snapshot to inspect it; press
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#saveSetupBtn"
                 data-help-highlight="#setup-manager"
@@ -4005,7 +4005,7 @@
               Projects, project requirements, automatic gear rules, preferences and runtime feedback live in your browser's
               <code>localStorage</code> so they remain available offline. Download the active setup with
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#shareSetupBtn"
                 data-help-highlight="#setup-manager"
@@ -4018,14 +4018,14 @@
               ><em>Backup</em></a>
               and use the Device Database Editor's
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#exportDataBtn"
                 data-help-highlight="#device-manager"
               ><em>Export</em></a>
               /
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#importDataBtn"
                 data-help-highlight="#device-manager"
@@ -4057,7 +4057,7 @@
               <li>
                 Save each project and download the active setup with
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#setup-manager"
                   data-help-target="#shareSetupBtn"
                   data-help-highlight="#setup-manager"
@@ -4066,7 +4066,7 @@
               <li>
                 Open
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#settingsButton"
                   data-help-target="#settingsButton"
                   data-help-highlight="#settingsDialog"
@@ -4083,7 +4083,7 @@
               <li>
                 Export custom gear from the Device Database Editor using the
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#device-manager"
                   data-help-target="#exportDataBtn"
                   data-help-highlight="#device-manager"
@@ -4103,7 +4103,7 @@
               <li>
                 Restore the planner snapshot through
                 <a
-                  class="help-link"
+                  class="help-link button-link"
                   href="#restoreSettings"
                   data-help-target="#restoreSettings"
                   data-help-highlight="#settingsDialog"
@@ -4146,20 +4146,20 @@
             <p>
               Open the device editor and choose
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#exportAndRevertBtn"
               ><em>Export and Revert</em></a>
               to restore the default database. Delete projects individually using the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#deleteSetupBtn"
                 data-help-highlight="#setup-manager"
               >Delete</a>
               button, or open <em>Settings → Backup &amp; Restore</em> and press
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#settingsButton"
                 data-help-target="#factoryResetButton"
               ><em>Factory reset</em></a>
@@ -4185,7 +4185,7 @@
             <p>
               Save the project, then click
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#generateOverviewBtn"
                 data-help-highlight="#setup-manager"
@@ -4223,13 +4223,13 @@
               >Device Database Editor</a>
               and use the
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#exportDataBtn"
               ><em>Export</em></a>
               button to download your current database as JSON. Use
               <a
-                class="help-link"
+                class="help-link button-link"
                 href="#device-manager"
                 data-help-target="#importDataBtn"
               ><em>Import</em></a>
